chore: dockerize backend for deployment